@@ -99,7 +99,7 @@ use IkiWiki::Setup::Standard {
 	# Allow generating feeds even if not generated by default?
 	#allowrss => 1,
 	#allowatom => 1,
-	# Urls to ping with XML-RPC when rss feeds are updated
+	# Urls to ping with XML-RPC when feeds are updated
 	#pingurl => [qw{http://rpc.technorati.com/rpc/ping}],
 	# Include discussion links on all pages?
 	discussion => 1,
@@ -167,4 +167,8 @@ use IkiWiki::Setup::Standard {
 	# For use with the aggregate plugin, to allow aggregation to be
 	# triggered via the web.
 	#aggregate_webtrigger => 1,
+	
+	# For use with the pinger plugin, how many seconds to wait before
+	# timing out.
+	#pinger_timeout => 15.
 }
