@@ -1,0 +1,11 @@
+[[template id=plugin name=pingee author="[[Joey]]"]]
+[[tag type/special-purpose]]
+
+This plugin causes ikiwiki to listen for pings, typically delivered from
+another ikiwiki instance using the [[pinger]] plugin. When a ping is
+recieved, ikiwiki will update the wiki, the same as if `ikiwiki --refresh`
+were ran at the command line.
+
+An url such as the following is used to trigger a ping:
+
+	http://mywiki.com/ikiwiki.cgi?do=ping
